--- a/subs.html
+++ b/subs.html
@@ -305,6 +305,20 @@
                 </div>
                 <div class="subscribe-info-rep">
                     <div class="subscribe-info__value">
+                        <svg viewBox="0 0 120 120" class="chart-gauge" fill="none" stroke-width="2">
+                            <defs>
+                                <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
+                                    <stop offset="0%"   stop-color="#05a"/>
+                                    <stop offset="100%" stop-color="#0a5"/>
+                                </linearGradient>
+                                <linearGradient id="linear2" x1="0%" y1="0%" x2="100%" y2="0%">
+                                    <stop offset="0%"   stop-color="#f10"/>
+                                    <stop offset="100%" stop-color="#f5a"/>
+                                </linearGradient>
+                            </defs>
+                            <circle class="chart-gauge-base" r="57.32" cx="60" cy="60"></circle>
+                            <circle class="chart-gauge-secondary" transform="rotate(-90 60 60)" stroke-dasharray="320 360" stroke-dashoffset="320" r="57.32" cx="60" cy="60"></circle>
+                        </svg>
                         <div class="subscribe-info__wrap">
                             <span class="subscribe-info__number">0.8</span>
                             <span class="subscribe-info__text">рейтинг</span>
