Change for modal

--- a/reg.html
+++ b/reg.html
@@ -548,7 +548,7 @@
                 </div>
             </div>
             <div class="modal_delimeter"></div>
-            <span class="modal-title">Ваша ставка:</span>
+            <span class="modal-title modal-title_big_margin">Ваша ставка:</span>
             <div class="modal_rate">
                 <button class="modal-button modal-button_gray modal-button_minus">- 100 ₽</button>
                 <span class="modal_rate_text">1 500 ₽</span>
