--- a/subs.html
+++ b/subs.html
@@ -401,6 +401,19 @@
             </div>
             <a href="#" class="subscribe-tariff__change">Выйти из профиля</a>
         </div>
+
+        <div class="modal modal_with_bg modal_active">
+            <div class="modal-close">
+                <img src="./img/icons/cancel.svg" alt="close" class="img-icon">
+            </div>
+            <span class="modal-title modal-title_big_margin">Пополнить баланс:</span>
+            <div class="modal_rate">
+                <button class="modal-button modal-button_gray modal-button_minus">- 100 ₽</button>
+                <span class="modal_rate_text">1 500 ₽</span>
+                <button class="modal-button modal-button_plus">+ 100 ₽</button>
+            </div>
+            <button class="modal-button modal-button_balance">Пополнить баланс</button>
+        </div>
     </div>
     <!-- /.wrapper -->
 </section>
