Добавлена модалка рейтинга

--- a/subs.html
+++ b/subs.html
@@ -402,7 +402,7 @@
             <a href="#" class="subscribe-tariff__change">Выйти из профиля</a>
         </div>
 
-        <div class="modal modal_with_bg modal_active">
+        <div class="modal modal_with_bg">
             <div class="modal-close">
                 <img src="./img/icons/cancel.svg" alt="close" class="img-icon">
             </div>
@@ -413,6 +413,21 @@
                 <button class="modal-button modal-button_plus">+ 100 ₽</button>
             </div>
             <button class="modal-button modal-button_balance">Пополнить баланс</button>
+        </div>
+
+        <div class="modal modal_with_bg modal_active">
+            <div class="modal-close">
+                <img src="./img/icons/cancel.svg" alt="close" class="img-icon">
+            </div>
+            <div class="modal-status">
+                <p>Рейтинг</p>
+                <div class="modal-status-item">
+                    <img src="./img/modal/smile.svg">
+                    <span>1 - Безупречная репутация</span>
+                </div>
+                <div class="modal-status-item"><img src="./img/modal/meh.svg"><span>0.9 - Отличный рейтинг</span></div>
+                <div class="modal-status-item"><img src="./img/modal/sad.svg"><span>0.8 - Будьте внимательней</span></div>
+            </div>
         </div>
     </div>
     <!-- /.wrapper -->
