Добавлена модалка оплатить с баланса

--- a/subs.html
+++ b/subs.html
@@ -415,7 +415,7 @@
             <button class="modal-button modal-button_balance">Пополнить баланс</button>
         </div>
 
-        <div class="modal modal_with_bg modal_active">
+        <div class="modal modal_with_bg">
             <div class="modal-close">
                 <img src="./img/icons/cancel.svg" alt="close" class="img-icon">
             </div>
@@ -427,6 +427,21 @@
                 </div>
                 <div class="modal-status-item"><img src="./img/modal/meh.svg"><span>0.9 - Отличный рейтинг</span></div>
                 <div class="modal-status-item"><img src="./img/modal/sad.svg"><span>0.8 - Будьте внимательней</span></div>
+            </div>
+        </div>
+
+        <div class="modal modal_with_bg modal_active">
+            <div class="modal-close">
+                <img src="./img/icons/cancel.svg" alt="close" class="img-icon">
+            </div>
+            <div class="modal-pay-method">
+                <div class="modal-pay-method-img">
+                    <img src="./img/modal/euro.svg">
+                </div>
+                <p>Оплатите тариф: Базовый</p>
+                <p class="modal-pay-method-price">299 ₽</p>
+                <button class="modal-button modal-button_gray">Оплатить с баланса</button>
+                <button class="modal-button">Оформить подписку</button>
             </div>
         </div>
     </div>
