--- a/index.html
+++ b/index.html
@@ -358,6 +358,25 @@
 </footer>
 <!-- /.footer -->
 
+<!-- Widget for lots -->
+<!-- Класс dark делает темную тему, класс -novisible убирает за экран, а класс -visible возвращает с анимацией, flipInX - вращает -->
+<div class="lots__widget animated">
+    <div class="lots__widget__info">
+        <div class="lots__widget__info__left">
+            <div class="lots__widget__name">Volkswagen Golf, 2015, 2.0 л.</div>
+            <div class="lots__widget__character">
+                <div class="lots__widget__character__item"><img src="img/widget/money.svg">2500 ₽</div>
+                <div class="lots__widget__character__item"><img src="img/widget/clock.svg">9:15</div>
+            </div>
+        </div>
+        <div class="lots__widget__info__time">5:26</div>
+        <div class="lots__widget__load" style="width: 60%"></div>
+    </div>
+    <div class="lots__widget__link">
+        <img src="img/widget/arrow.svg">
+    </div>
+</div>
+
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script src="js/jquery.nicescroll.min.js"></script>
