--- a/index.html
+++ b/index.html
@@ -379,6 +379,25 @@
     </div>
 </div>
 
+<div class="lots__widget lots__top -novisible">
+    <div class="lots__widget__container">
+        <div class="lots__top__container">
+            <div class="lots__widget__link">
+                <img src="img/widget/vw.svg">
+            </div>
+            <div class="lots__widget__info">
+                <div class="lots__widget__info__left">
+                    <div class="lots__widget__name">Volkswagen Golf, 2015, 2.0 л.</div>
+                    <div class="lots__widget__character">
+                        <div class="lots__widget__character__item"><img src="img/widget/money.svg">2500 ₽</div>
+                        <div class="lots__widget__character__item"><img src="img/widget/clock.svg">9:15</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script src="js/jquery.nicescroll.min.js"></script>
